kubernetes/apps/network/litellm-route/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: litellm
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  hostnames:
    - "llms.${SECRET_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: litellm
          namespace: ai-system
          port: 4000
      timeouts:
        request: 120s
